# llm_eval

./: .gitignore  README.md  flake.nix  gen.py  pyproject.toml
benchmarks/freebsd-src/contrib/bc/vs/: bc.vcxproj  bc.vcxproj.filters  bcl.vcxproj  bcl.vcxproj.filters
benchmarks/freebsd-src/sys/rpc/rpcsec_gss/: svc_rpcsec_gss.c
docs/: blog.md
patches/freebsd-src/: 00-rename-variables.patch  01-add-misleading-comments.patch  02-add-neutral-comments.patch  03-reformat-whitespace.patch  04-add-dead-code.patch  05-obfuscate-buffer-size.patch  06-replace-memcpy-with-loop.patch  07-extract-to-helper.patch  08-obfuscate-max-auth-bytes.patch  09-add-fake-bounds-check.patch  10-combined-obfuscation.patch  11-change-max-auth-bytes.patch  12-char-literal-max-auth-bytes.patch  13-structure-mic-frame.patch  14-rusty-span-writer.patch  15-lane-serializer.patch  16-generic-cursor.patch  17-borrowed-view-runtime.patch  18-runtime-clamped-budget.patch
prompts/: security_audit_file.md  security_audit_function.md
src/llm_eval/: config.yaml  evaluate.py  models.py  run.py
